--- a/social-network/framework/hospital-doctor-directory/assets/css/user-public-profile.css
+++ b/social-network/framework/hospital-doctor-directory/assets/css/user-public-profile.css
@@ -366,8 +366,34 @@
 	font-size: 18px;
 	font-weight: normal;
 	margin-top: 0px;
+	color:#333333;
 	border-bottom: 1px solid #f1f1f1;
 	padding-bottom: 10px;
+}
+.caption-subject{
+	font-size:26px;
+	font-weight:bold;
+	color:#333333;
+	display:inline-block;
+	margin-top:20px;
+	margin-left:20px;
+	margin-bottom:30px;
+}
+.tabbable-line .nav.nav-tabs{
+	position:relative;
+	top:0px;
+	padding-left:20px;
+	border:none;
+	margin:0px;
+}
+.tabbable-line .nav.nav-tabs li{
+	margin:0px;
+}
+.portlet  .table-responsive{
+}
+.profile-content .portlet-body{
+	padding:20px;
+	padding-top:0px;
 }
 .compny-profile .profile-company-content .tab-content h3 {
 	font-size: 18px;
@@ -385,10 +411,22 @@
 .profile-company-content .sidebar-information ul {
 	margin: 0px;
 	padding: 0px;
+	border-bottom:1px solid #f1f1f1;
 }
 .profile-company-content .sidebar-information ul li {
 	padding: 0px;
 	list-style: none;
+	border-top:1px solid #f1f1f1;
+}
+.bootstrap-wrapper .nav > li > a{
+    border-left: 2px solid #0099fe;
+	border-left-color:transparent;
+}
+.profile-usermenu ul li.active a{
+	margin-left:0px;
+}
+.bootstrap-wrapper .nav > li > a:hover{
+    border-left: 2px solid #0099fe;
 }
 iframe {
 	border: none;
@@ -729,6 +767,7 @@ iframe {
 .network .nav-tabs {
 	position: relative;
 	top: 0px;
+	border:none;
 }
 .network .nav-tabs li {
 	margin-right: 0px;
@@ -800,28 +839,29 @@ iframe {
 .main-mem .head button {
 	border: 1px solid #cccccc;
 	color: #787878;
-	background:none;
+	background: none;
 	display: inline-block;
 	padding: 5px 15px;
 	font-size: 12px;
 	border-radius: 4px;
 	margin-right: 10px;
 }
-.main-mem .head button{
+.main-mem .head button {
 }
 .main-mem .head form {
 	position: relative;
+	padding:0px;
 }
 .main-mem .head form button {
 	background: none;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    line-height: 36px;
-    z-index: 2;
-    border: none;
-    font-size: 12px;
-    padding: 0px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	line-height: 36px;
+	z-index: 2;
+	border: none;
+	font-size: 12px;
+	padding: 0px;
 }
 .main-mem .head input {
 	font-size: 12px;
@@ -888,13 +928,62 @@ iframe {
 }
 .folow-persons .checkbox {
 	position: absolute;
-	left: -15px;
+	left: 5px;
 	padding: 0px;
 	line-height: 15px;
 	margin: 0px;
-	top: 5px;
-	height:20px;
-	z-index:99;
+	top: 12px;
+	height: 20px;
+	z-index: 99;
+}
+input[type="checkbox"].styled:checked + label:after, input[type="radio"].styled:checked + label:after {
+	line-height: 18px;
+}
+.profile-company-content .nav-tabs li a {
+	border: none !important;
+	margin: 0px;
+	margin-right:5px;
+}
+.bs-callout-info{
+	margin:0px !important;
+	padding-left:20px;
+	padding-bottom:20px;
+	display:inline-block;
+	width:100%;
+}
+.network .nav-tabs li {
+	margin: 0px;
+	border: none !important;
+}
+.portlet-body form{
+	padding:20px;
+}
+.n-p-r {
+	padding-right: 0px !important;
+}
+.n-p-l {
+	padding-left: 0px !important;
+}
+.profile-userbuttons {
+	text-align: center;
+	margin-bottom: 30px;
+}
+.network h4 {
+	color: #333;
+	margin-bottom: 30px;
+	font-size: 26px;
+	margin-top: 0px;
+	font-weight: bold;
+}
+.profile-company-content .nav-tabs li.active a {
+	border: none !important;
+	background: #0099ff !important;
+	color: #fff !important;
+}
+.profile-company-content .nav-tabs li.active a:hover {
+	border: none !important;
+	background: #0099ff;
+	color: #fff;
 }
 .folow-persons .avatar {
 	height: 38px;
@@ -912,9 +1001,12 @@ iframe {
 	padding: 4px;
 	background: #fff;
 }
-.n-p-r {
-	padding-right: 0px;
+.profile-company-content .sidebar .sidebar-information{
+	margin:0 -20px;
 }
-.n-p-l {
-	padding-left: 0px;
+.network .tab-content{
+	background:#fff;
+}
+.network  form{
+	padding:20px;
 }
