--- a/social-network/assets/css/user-public-profile.css
+++ b/social-network/assets/css/user-public-profile.css
@@ -4,7 +4,9 @@
 .blue-background{
  background-color: #0099fe;
 }
-
+.gray-background{
+ background-color: #BDC3C7;
+}
 
 #profile-template-5 .profile-sidebar {
 	float: left;
