--- a/social-network/framework/hospital-doctor-directory/assets/css/user-public-profile.css
+++ b/social-network/framework/hospital-doctor-directory/assets/css/user-public-profile.css
@@ -369,7 +369,7 @@ li.odd { background:#f9f9f9; }
 	margin-top: 0px;
 	color:#333333;
 	border-bottom: 1px solid #f1f1f1;
-	padding-bottom: 10px;
+	padding: 20px;
 }
 .caption-subject{
 	font-size:26px;
@@ -1003,7 +1003,7 @@ input[type="checkbox"].styled:checked + label:after, input[type="radio"].styled:
 	background: #fff;
 }
 .profile-company-content .sidebar .sidebar-information{
-	margin:0 -20px;
+	margin:0;
 }
 .network .tab-content{
 	background:#fff;
