--- a/social-network/assets/css/user-public-profile.css
+++ b/social-network/assets/css/user-public-profile.css
@@ -918,6 +918,7 @@ iframe {
 	overflow: hidden;
 	margin-right: 10px;
 }
+
 .folow-persons .checkbox {
 	position: absolute;
 	left: -15px;
@@ -935,6 +936,7 @@ iframe {
 }
 .folow-persons .avatar img {
 	width: 100%;
+	border-radius: 50%;
 }
 .folow-persons li:hover .avatar {
 	height: 60px;
@@ -943,6 +945,10 @@ iframe {
 	left: -10px;
 	padding: 4px;
 	background: #fff;
+	border-radius: 50%;
+}
+.folow-persons li:hover .avatar img {
+	border-radius: 50%;
 }
 .n-p-r {
 	padding-right: 0px;
