--- a/tiger/assets/css/user-directory.css
+++ b/tiger/assets/css/user-directory.css
@@ -21,7 +21,7 @@
 			-webkit-transition: all .5s ease-in-out;
 			-moz-transition: all .5s ease-in-out;
 			-o-transition: all .5s ease-in-out;
-			transition: all .5s ease-in-out;	
+			transition: all .5s ease-in-out;
 		}
 		#directory-temp	.ch-info {
 			position: absolute;
@@ -39,7 +39,7 @@
 			-moz-transform: scale(0);
 			-o-transform: scale(0);
 			-ms-transform: scale(0);
-			transform: scale(0);		
+			transform: scale(0);
 			-webkit-backface-visibility: hidden;
 			top: 0px;
 		}
@@ -96,10 +96,6 @@
 			text-align: center;
 			width: 100%;
 			padding-bottom: 30px;
-			background: #fff;
-			box-shadow: 0px 2px 1px rgba(0,0,0, .1);
-			border-bottom-left-radius: 3px;
-			border-bottom-right-radius: 3px;
 		}
 		#directory-temp .fa{
 			color: #555;
@@ -122,15 +118,15 @@
 			margin-bottom: 0;
 		}
 		#directory-temp .ch-grid li:hover .home-img{
-			border: 3px solid #0099fe !important;			
+			border: 3px solid #0099fe !important;
 			-webkit-transition: all .5s ease-in-out;
 			-moz-transition: all .5s ease-in-out;
 			-o-transition: all .5s ease-in-out;
-			transition: all .5s ease-in-out;	
-			
+			transition: all .5s ease-in-out;
+
 		}
 		#directory-temp .ch-grid li:hover h5{
-			color: #0099fe;	
+			color: #0099fe;
 		}
 		#directory-temp .fa-search{
 			color: #555;
@@ -147,7 +143,7 @@
 		border: 1px solid #555;
 		outline: none;
 		}
-			
+
 	 	#directory-temp .submit{
 		 position: absolute;
 		 left:93%;
@@ -257,14 +253,29 @@
 
 .directory-option {
 	position: relative;
-	background: #fff;
-	padding: 15px;
-	box-shadow: 0px 0px 3px rgba(0,0,0,.2);
+	padding: 15px 0;
   border-radius: 3px;
+}
+
+.directory-option h3 {
+	margin: 0;
+	text-align: left;
 }
 
 .directory-option form {
 	margin-bottom: 0;
+}
+
+.directory-option .sort-by-select {
+	float: right;
+	min-width: 220px;
+}
+
+@media(max-width: 767px) {
+	.directory-option .sort-by-select {
+		float: left;
+		margin-top: 10px;
+	}
 }
 
 .directory-option select {
