--- a/tiger/assets/css/advanced-search-form.css
+++ b/tiger/assets/css/advanced-search-form.css
@@ -102,7 +102,7 @@
   position: absolute;
   top: 6px;
   left: 10px;
-  color: #fff;
+  color: #333;
 }
 
 #header .header-search-bar .toggle:hover,
@@ -112,6 +112,7 @@
 
 #header .header-search-bar.active .toggle:after {
   content: "\f00d";
+  color: #fff;
 }
 
 
