Update User Directory

--- a/tiger/assets/css/user-directory.css
+++ b/tiger/assets/css/user-directory.css
@@ -295,3 +295,11 @@
     text-transform: uppercase;
     font-weight: bold;
 }
+
+.pro-mem .uou-block-6a p{
+	font-size:14px;
+}
+.pro-mem .uou-block-6a{
+	background:#fff;
+	padding-bottom:0px;
+}
