--- a/tiger/assets/css/user-public-profile.css
+++ b/tiger/assets/css/user-public-profile.css
@@ -1534,7 +1534,13 @@ iframe {
 .plugin .footer #branding {
 	display: none !important;
 }
-
+.pro-mem .uou-block-6a p{
+	font-size:13px;
+}
+.pro-mem .uou-block-6a{
+	background:#fff;
+	padding-bottom:0px;
+}
 
 
 
