Update signup error

--- a/tiger/assets/css/user-directory.css
+++ b/tiger/assets/css/user-directory.css
@@ -307,3 +307,12 @@
 .user-details .para1 {
 	margin: 0 !important;
 }
+
+.pro-mem .uou-block-6a p{
+	font-size:13px;
+}
+.pro-mem .uou-block-6a{
+	background:#fff;
+	padding-bottom:0px;
+}
+
