--- a/tiger/assets/css/user-directory.css
+++ b/tiger/assets/css/user-directory.css
@@ -303,7 +303,36 @@
 	border-radius: 0 0 3px 3px;
 }
 
+.user-details h6,
+.user-details p {
+	margin: 0;
+}
+
+.user-details p {
+	font-size: 13px;
+	color: #999;
+	line-height: 22px;
+}
+
 .user-details .para,
 .user-details .para1 {
 	margin: 0 !important;
+}
+
+
+.uer-directory-single {
+	position: relative;
+	transition: all .3s ease;
+
+}
+
+.uer-directory-single:hover {
+	box-shadow: 0 0 15px rgba(0,0,0, .1);
+}
+
+.uer-directory-single .uer-image {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 220px;
 }
