--- a/tiger/framework/hospital-doctor-directory/template/profile-public/profile_company-no-tabs.html
+++ b/tiger/framework/hospital-doctor-directory/template/profile-public/profile_company-no-tabs.html
@@ -15,21 +15,21 @@
 
 <body>
 <div id="main-wrapper">
-  <div class="compny-profile"> 
+  <div class="compny-profile">
     <!-- SUB Banner -->
     <div class="profile-bnr" style="background:url(images/profile-bnr-1.jpg) no-repeat; background-size:cover;">
-      <div class="container"> 
-        
+      <div class="container">
+
         <!-- User Iinfo -->
         <div class="user-info">
           <h1>UOU Motors Inc. <a data-toggle="tooltip" data-placement="top" title="Verified Member"><img src="images/icon-ver.png" alt="" ></a> </h1>
           <h6>Automotive</h6>
           <p>7979 Leary Way Northeast
             Redmond, WA 98052  (<a href="#.">map</a> / <a href="#.">street</a>)</p>
-          
+
           <!-- Social Icon -->
           <div class="social-links"> <a href="#."><i class="fa fa-facebook"></i></a> <a href="#."><i class="fa fa-twitter"></i></a> <a href="#."><i class="fa fa-google"></i></a> <a href="#."><i class="fa fa-linkedin"></i></a> </div>
-          
+
           <!-- Stars -->
           <ul class="row">
             <li class="col-sm-6">
@@ -39,7 +39,7 @@
               <p><i class="fa fa-bookmark-o"></i> 28 Bookmarks</p>
             </li>
           </ul>
-          
+
           <!-- Followers -->
           <div class="followr">
             <ul class="row">
@@ -52,7 +52,7 @@
             </ul>
           </div>
         </div>
-        
+
         <!-- Top Riht Button -->
         <div class="right-top-bnr">
           <div class="connect"> <a href="#." data-toggle="modal" data-target="#myModal"><i class="fa fa-user-plus"></i> Connect</a> <a href="#."><i class="fa fa-share-alt"></i> Share</a>
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-      
+
       <!-- Modal POPUP -->
       <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
@@ -83,8 +83,8 @@
                   <li class="col-xs-6">
                     <input type="text" placeholder="Email">
                   </li>
-                  
-                  
+
+
                   <li class="col-xs-12">
                     <textarea placeholder="Your Message"></textarea>
                   </li>
@@ -98,16 +98,16 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Profile Company Content -->
-    <div class="profile-company-content has-bg-image" data-bg-color="f5f5f5">
+    <div class="profile-company-content has-bg-image">
       <div class="container">
-        <div class="row"> 
-          
-          
+        <div class="row">
+
+
           <!-- SIDE BAR -->
-          <div class="col-md-4"> 
-            
+          <div class="col-md-4">
+
             <!-- Company Information -->
             <div class="sidebar">
               <h5 class="main-title">Company Information</h5>
@@ -139,7 +139,7 @@
                 </ul>
               </div>
             </div>
-            
+
             <!-- Company Rating -->
             <div class="sidebar">
               <h5 class="main-title">Company Rating</h5>
@@ -163,7 +163,7 @@
                 </ul>
               </div>
             </div>
-            
+
             <!-- Company Rating -->
             <div class="sidebar">
               <h5 class="main-title">Contact</h5>
@@ -177,31 +177,31 @@
               </div>
             </div>
           </div>
-          
+
           <!-- Tab Content -->
           <div class="col-md-8">
-            <div class="tab-content"> 
-              
+            <div class="tab-content">
+
               <!-- PROFILE -->
               <div id="profile" class="tab-pane fade in active">
                 <div class="profile-main">
                   <h3>About the Company</h3>
                   <div class="profile-in">
-                    
+
                     <div class="image-part">
                     	<img src="images/profile-img.jpg" alt="" >
                     </div>
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi, mollitia, voluptatibus 
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi, mollitia, voluptatibus
                       similique aliquidautem laudantium sapiente ad enim ipsa modi labo rum accusantium deleniti neque. </p>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, nihil, dolores, culpa ullam vero ipsum placeat 
-                      accusamus nemoitate id molestiae consectetur quae pariatur repudi andae vel ex quaerat nam iusto aliquid 
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, nihil, dolores, culpa ullam vero ipsum placeat
+                      accusamus nemoitate id molestiae consectetur quae pariatur repudi andae vel ex quaerat nam iusto aliquid
                       laborum quia adipisci aut ut imcati nisi deleniti tempore maxime sequi fugit reiciendis libero quo. Rerum
                       assumenda.</p>
-                    
+
                   </div>
                 </div>
-                
+
                 <!-- Services -->
                 <div class="profile-main">
                   <h3>Services</h3>
@@ -213,8 +213,8 @@
                       </div>
                       <div class="media-body">
                         <h6>Engine diagnostics and repairs</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi, 
-                          mollitia, voluptatibus similique aliquidautem laudantium sapiente ad enim ipsa modi 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi,
+                          mollitia, voluptatibus similique aliquidautem laudantium sapiente ad enim ipsa modi
                           labo rum accusantium deleniti neque.</p>
                       </div>
                     </div>
@@ -224,8 +224,8 @@
                       </div>
                       <div class="media-body">
                         <h6>Engine diagnostics and repairs</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi, 
-                          mollitia, voluptatibus similique aliquidautem laudantium sapiente ad enim ipsa modi 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi,
+                          mollitia, voluptatibus similique aliquidautem laudantium sapiente ad enim ipsa modi
                           labo rum accusantium deleniti neque.</p>
                       </div>
                     </div>
@@ -235,15 +235,15 @@
                       </div>
                       <div class="media-body">
                         <h6>Engine diagnostics and repairs</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi, 
-                          mollitia, voluptatibus similique aliquidautem laudantium sapiente ad enim ipsa modi 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, maxime, excepturi,
+                          mollitia, voluptatibus similique aliquidautem laudantium sapiente ad enim ipsa modi
                           labo rum accusantium deleniti neque.</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              
+
             </div>
           </div>
         </div>
@@ -253,20 +253,20 @@
 </div>
 
 <!-- Scripts
-<script src="https://maps.googleapis.com/maps/api/js"></script> 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>  --> 
-<script>window.jQuery || document.write('<script src="js/jquery-2.1.3.min.js"><\/script>')</script> 
-<script src="js/plugins/superfish.min.js"></script> 
-<script src="js/jquery.ui.min.js"></script> 
-<script src="js/plugins/rangeslider.min.js"></script> 
-<script src="js/plugins/jquery.flexslider-min.js"></script> 
-<script src="js/uou-accordions.js"></script> 
-<script src="js/uou-tabs.js"></script> 
-<script src="js/plugins/select2.min.js"></script> 
-<script src="js/owl.carousel.min.js"></script> 
-<script src="js/gmap3.min.js"></script> 
-<script src="js/bootstrap.js"></script> 
-<script src="js/scripts.js"></script> 
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>  -->
+<script>window.jQuery || document.write('<script src="js/jquery-2.1.3.min.js"><\/script>')</script>
+<script src="js/plugins/superfish.min.js"></script>
+<script src="js/jquery.ui.min.js"></script>
+<script src="js/plugins/rangeslider.min.js"></script>
+<script src="js/plugins/jquery.flexslider-min.js"></script>
+<script src="js/uou-accordions.js"></script>
+<script src="js/uou-tabs.js"></script>
+<script src="js/plugins/select2.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/gmap3.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/scripts.js"></script>
 <script>
 $(function () {
   $('[data-toggle="tooltip"]').tooltip()
